# JobSystem

./: .gitignore  CMakeLists.txt  README.md
Source/JobSystem/: Common.h  TaskDispatcher.cpp  TaskDispatcher.h  TaskDispatcherInterface.cpp  TaskDispatcherInterface.h  Threads.h  main.cpp
Source/JobSystem/Core/: Defines.h
Source/JobSystem/Examples/: Main.cpp
Source/JobSystem/Jobs/: JobSystem.cpp  JobSystem.h  Task.cpp  Task.h  TaskQueues.h  WorkerThread.cpp  WorkerThread.h
Source/JobSystem/Platform/: Platform.h
Source/JobSystem/Tasks/: TaskPrivate.cpp  TaskPrivate.h
Source/JobSystem/Threading/: Synchronization.h  Thread.h  ThreadTypes.h
